# syllabye

./: .air.toml  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker_compose.yml  go.mod  go.sum  package-lock.json  pyproject.toml
aws/syllabus/: lambda.py  requirements.txt
aws/syllabus_trigger/: lambda.py
aws/thumbnail/: lambda.py  requirements.txt
aws/webhook/: lambda.py
cmd/server/: main.go
docs/: docs.go  swagger.json  swagger.yaml
internal/: router.go
internal/config/: app.go  aws.go  context.go  cookie.go  google.go  http.go  jwt.go  postgres.go  sentry.go
internal/handler/: auth.go  category.go  course.go  faculty.go  user.go  (+3 more)
migrations/: 000001_create_faculties.down.sql  000001_create_faculties.up.sql  000002_create_programs.down.sql  000002_create_programs.up.sql  000003_create_courses.down.sql  000003_create_courses.up.sql  000004_create_users.down.sql  000004_create_users.up.sql  000005_create_session.down.sql  000005_create_session.up.sql  000006_create_syllabi.down.sql  000006_create_syllabi.up.sql  000007_create_user_courses.down.sql  000007_create_user_courses.up.sql  000008_create_user_links.down.sql  000008_create_user_links.up.sql  000009_create_date_modified_trigger.down.sql  000009_create_date_modified_trigger.up.sql
scripts/: apply_lambda_env.sh  create_migration.sh  deploy_lambda.sh  enable_bucket_cors.sh  extract_courses.py  extract_programs.py  load_data.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
ui/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
(+128 files in other folders)
